--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\trait\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
-j2ee.server.home=D:/AN/apache-tomcat-9.0.34
-j2ee.server.instance=tomcat90:home=D:\\AN\\apache-tomcat-9.0.34
+deploy.ant.properties.file=C:\\Users\\TUAN\\AppData\\Roaming\\NetBeans\\12.6\\tomcat90.properties
+j2ee.server.home=D:/Program/NetBeans-12.0/apache-tomcat-9.0.52
+j2ee.server.instance=tomcat90:home=D:\\Program\\NetBeans-12.0\\apache-tomcat-9.0.52
+javac.debug=true
+javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\HoaiNX1\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\TUAN\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
